--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==5.0.3
 django-cors-headers==4.3.1
+django-filter==24.2
 djangorestframework==3.15.1
 psycopg2==2.9.9
 sqlparse==0.4.4
